# detidelevel

./: README.rst  pyproject.toml  setup.py
conda/: meta.yaml
detidelevel/: __init__.py  core.py  plot.py  util.py
detidelevel/tests/: test_detide.py
