[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detidelevel"
dynamic = ["version"]
description = "Functions to remove tidal signals from surface water levels"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    { name = "Mike Kittridge", email = "mullenkamp1@gmail.com" },
]
keywords = [
    "level",
    "tide",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "statsmodels",
]

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
    "spyder-kernels==2.5.*",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/mullenkamp/detidelevel"

[tool.hatch.version]
path = "detidelevel/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/detidelevel",
]
